# Secura

./: .gitignore  CMakeLists.txt  vcpkg.json
src/: App.cpp  App.h  CMakeLists.txt  Cryptograph.cpp  Cryptograph.h  Decrypt_Panel.cpp  Decrypt_Panel.h  Encrypt_Panel.cpp  Encrypt_Panel.h  MainFrame.cpp  MainFrame.h
